# slm-libgit2

./: .gitignore  slm.toml  stanza-libgit2.proj  stanza-library.proj  stanza.proj  template-stanza-libgit2.proj
conan_lbstanza_generator/: conanfile.py
dev/: CMakeLists.txt  Makefile  conanfile.py  lgtest.c
src/: libgit2.c  libgit2.stanza  libgit2.stanza.save-wrapped
src/libgit2/: tests.stanza
src/libgit2/enum/: git_branch_t.stanza  git_checkout_notify_t.stanza  git_checkout_strategy_t.stanza  git_clone_local_t.stanza  git_delta_t.stanza  git_diff_binary_t.stanza  git_diff_find_t.stanza  git_diff_flag_t.stanza  git_diff_format_t.stanza  git_diff_line_t.stanza  git_diff_option_t.stanza  git_diff_stats_format_t.stanza  git_error_code.stanza  git_error_t.stanza  git_feature_t.stanza  git_fetch_prune_t.stanza  git_filemode_t.stanza  git_libgit2_opt_t.stanza  git_object_t.stanza  git_proxy_t.stanza  git_reference_format_t.stanza  git_reference_t.stanza  git_remote_autotag_option_t.stanza  git_remote_redirect_t.stanza  git_submodule_ignore_t.stanza  git_submodule_recurse_t.stanza  git_submodule_update_t.stanza  git_tree_update_t.stanza  git_treewalk_mode.stanza
